Add more javadoc